[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/MC/mc_frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/theme/art/ui/touch_button_left.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/art/ui/touch_button_right.png" type="Texture" id=6]
[ext_resource path="res://assets/theme/art/ui/touch_button_jump.png" type="Texture" id=7]
[ext_resource path="res://assets/theme/art/ui/touch_button_fire.png" type="Texture" id=8]
[ext_resource path="res://src/Actors/Gun.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/DashSpawn.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/GhostSpawn.gd" type="Script" id=11]
[ext_resource path="res://assets/audio/sfx/dash.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/sfx/hurt.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/sfx/death.wav" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurty"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=11]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 14 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 30
script = ExtResource( 1 )

[node name="ShootAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="ShootCooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
one_shot = true

[node name="DashLength" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GhostSpacing" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 8

[node name="GhostSpawn" type="Position2D" parent="."]
position = Vector2( 0, -14 )
script = ExtResource( 11 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
z_index = 1
frames = ExtResource( 2 )
animation = "walk"
frame = 1
playing = true
offset = Vector2( 8, -2 )

[node name="Gun" type="Position2D" parent="Sprite"]
position = Vector2( 13, 7 )
script = ExtResource( 9 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sprite/Gun"]
position = Vector2( -30.6589, -6.13176 )
stream = ExtResource( 4 )
volume_db = 9.649
pitch_scale = 2.28

[node name="Gun1" type="Position2D" parent="Sprite/Gun"]

[node name="Gun2Top" type="Position2D" parent="Sprite/Gun"]
position = Vector2( 2, -15 )

[node name="Gun2Bottom" type="Position2D" parent="Sprite/Gun"]
position = Vector2( 2, 15 )

[node name="Gun3Top" type="Position2D" parent="Sprite/Gun"]
position = Vector2( 4, -20 )
rotation = -0.349066

[node name="Gun3Bottom" type="Position2D" parent="Sprite/Gun"]
position = Vector2( 4, 20 )
rotation = 0.347312

[node name="Gun4Top" type="Position2D" parent="Sprite/Gun"]
position = Vector2( 5, -16 )
rotation = -0.0865542

[node name="Gun4Bottom" type="Position2D" parent="Sprite/Gun"]
position = Vector2( 5, 16 )
rotation = 0.0872665

[node name="Gun5Top" type="Position2D" parent="Sprite/Gun"]

[node name="Gun5Bottom" type="Position2D" parent="Sprite/Gun"]

[node name="DashSpawn" type="Position2D" parent="Sprite"]
position = Vector2( -8, 14 )
script = ExtResource( 10 )

[node name="Dash" type="AudioStreamPlayer2D" parent="Sprite/DashSpawn"]
position = Vector2( -8, 0 )
stream = ExtResource( 12 )
volume_db = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/crouch = SubResource( 1 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/hurty = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/idle_weapon = SubResource( 6 )
anims/jumping = SubResource( 7 )
anims/jumping_weapon = SubResource( 8 )
anims/run = SubResource( 9 )
anims/run_weapon = SubResource( 10 )
anims/standing_weapon_ready = SubResource( 11 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -28 )
current = true
process_mode = 0
limit_bottom = 20000000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14 )
shape = SubResource( 12 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
position = Vector2( 27.7593, 360.87 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
position = Vector2( 121.542, 361.415 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="UI"]
position = Vector2( 666.224, 359.02 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI"]
position = Vector2( 668.073, 262.788 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
action = "shoot"
visibility_mode = 1

[node name="DebuffTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="GhostSpacing" to="." method="_on_GhostSpacing_timeout"]
[connection signal="timeout" from="DebuffTimer" to="." method="_on_DebuffTimer_timeout"]
